backend for ambulance waiting list
